10.sep (ws)
      - fix editing of simple text line element
      - use smaller beams for grace notes
      - fix input of rests with space key for voices > 1
9.sep (ws)
      - updated instruments.xml from Magnus Johansson
      - fix landscape page format preset
      - fix playback of slurs
      - fix portaudio configuration (device list always showed api 0 devices)
      - portaudio: fallback to default device on open error
      - add reverb parameter to synthesizer control
8.sep (ws)
      - fix crash after removing instruments
      - connect meter display in synthesizer control panel
7.sep (ws)
      - new control panel for synthesizer featuring an audio mixer for reverb/chorus/master
        volume; no restart necessary anymore after soundfont changes
      (db)
      - reduced default height of main window to fit on 1280 x 768 display
      - added Russian handbook and updated other handbooks
      - handbooks use DeJaVu font (which contains Russian characters)
2.sep (la)
      - fix tempo import from mscx/mscz. Visible on midi export
1.sep (db)
      - allow early finish of new score wizard
      - fix missing key signature page after template page in new score wizard
      - compatibility updates for handbook script (website and OpenOffice.org)
      (la)
      - enable right click by ctrl+click on mac
31.aug (db)
      - fixes for handbook menu items
      - add window title during splash screen
       (la)
      - fix dynamics display on mac (mscore1 *20*)
30.aug (db)
      - remove pause button (equivalent functionality already in play button)
      - add Ctrl+Space shortcut for start and stopping playback
28.aug (ws)
      - fix chord table (root name was displayed twice)
      - fix select mode "replace selection"
      - fix "select similar" for slur
      - fix duplet creation
27.aug (ws)
      - fixes for cross stave beams
      (db)
      - fix capitalization for new strings
      - fix issue with Edit > Select All